<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">



    <!--<item-->
        <!--android:id="@+id/action_item1"-->
        <!--android:icon="@drawable/ic_perm_device_information_black_24dp"-->
        <!--android:title="@string/item_1"-->
        <!--android:checked="false"-->
        <!--/>-->
    <item
        android:id="@+id/action_item2"
        android:icon="@drawable/facebook_menu"
        android:title="@string/item_2"/>
    <item
        android:id="@+id/action_item3"
        android:icon="@drawable/twitter_menu"
        android:title="@string/item_3"/>
    <!--<item-->
        <!--android:id="@+id/action_item4"-->
        <!--android:icon="@drawable/location_menu"-->
        <!--android:title="@string/item_4"/>-->

    <item
        android:id="@+id/action_item5"
        android:icon="@drawable/ic_share_black_24dp"
        android:title="@string/item_5"
        />
</menu>