<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@mipmap/bg_splash"
    android:theme="@style/AppTheme">

   <!-- <ImageView android:id="@+id/splashscreen"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:layout_gravity="center"/>-->


    <TextView
        android:id="@+id/companytitle"
        android:layout_width="wrap_content"
        android:textColor="@color/colorWhite"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:fontFamily="sans-serif-light"
        android:textSize="@dimen/splash_font_size"

        android:text="@string/app_company"/>

    <TextView
        android:id="@+id/companytitlename"
        android:layout_below="@id/companytitle"
        android:layout_width="wrap_content"
        android:textColor="@color/colorWhite"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:fontFamily="sans-serif-light"
        android:textSize="@dimen/splash_font_size"
        android:textStyle="bold"
        android:text="@string/app_name"/>

    <TextView
        android:id="@+id/appfullname"
        android:layout_below="@id/companytitlename"
        android:layout_width="match_parent"
        android:textColor="@color/colorWhite"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="bottom|center_horizontal"
        android:fontFamily="sans-serif-light"
        android:layout_marginBottom="10dp"
        android:textSize="25dp"
        android:text="@string/app_name_full_hindi"/>

</RelativeLayout>

    <!--android:src="@drawable/splash"-->